--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -118,6 +118,7 @@ ul,ol,li{list-style: none;padding: 0;}
 .flex_middle{display: flex;align-items: center;}
 .flex_center{display: flex;align-items: center;justify-content: center;}
 .flex_between{display: flex;align-items: center;justify-content: space-between;}
+.flex_between1{display: flex;align-items: flex-start;justify-content: space-between;}
 .ellipsis{overflow: hidden;text-overflow: ellipsis;white-space: nowrap;}
 .line_ellipsis{-webkit-line-clamp: 2;-webkit-box-orient: vertical;display: -webkit-box;text-overflow: ellipsis;overflow: hidden;}
 .wrap_center{width: 1200px;margin: 0 auto;}
