--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -127,6 +127,7 @@ ul,ol,li{list-style: none;padding: 0;}
 .hidden{overflow: hidden;}
 .mb22{margin-bottom: 22px;}
 .mb20{margin-bottom: 20px;}
+.mb10{margin-bottom: 10px;}
 .mb35{margin-bottom: 35px;}
 .ml15{margin-left: 15px;}
 .ml20{margin-left: 20px;}
