--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -250,3 +250,8 @@ ul,ol,li{list-style: none;padding: 0;}
   border-radius: 3px;
   padding: 10px 15px;
 }
+.ellipsis{
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis
+}
